# brightness-cli

./: CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: build.yml  release.yml
src/: change_brightness.rs  cli.rs  main.rs
wix/: main.wxs
